
[project]
name = "data-enhance"
version = "0.1.0"
description = "Custom Albumentations transforms for background manipulation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "albumentations>=1.3.0",
    "opencv-python>=4.5.0",
    "numpy>=1.21.0",
]

[tool.setuptools.packages.find]
where = ["."]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
